0.1723
    - added EXPERIMENTAL update_timestamp method to DBIx::Custom
    - added EXPERIMENTAL insert_timestamp method to DBIx::Custom
    - removed EXPERIMENTAL timestamp attribute from DBIx::Custom
0.1722
    - added EXPERIMENTAL timestamp option to DBIx::Custom insert
      and update method.
    - added EXPERIMENTAL timestamp attribute to DBIx::Custom
    - added {KEY => {OPTION_KEY => OPTION_VALUE} syntax
      to EXPERIMENTAL DBIx::Custom::Mapper map method
    - added {KEY => sub { VALUE }} syntax
      to EXPERIMETNAL DBIx::Custom::Mapper map method
    - removed EXPERIMENTAL wrap option from select method
    - insert_param, update_param, and assign param can
      be wrapeed by DB function by C<wrap> option
    - added EXPERIMENTAL pass attribute to DBIx::Custom::Mapper
    - removed EXPERIMENTAL ignore attribute from DBIx::Custom::Mapper
0.1721
    - added EXPERIMENTAL DBIx::Custom::Mapper class
    - added EXPERIMENTAL mapper method to DBIx::Custom
0.1720
    - removed placeholder count check
    - added EXPERIMENTAL execute method's id and primary key option.
    - added EXPERIMENTAL DBIx::Custom::Model execute method
0.1719
    - DBIx::Custom support Microsoft Access through DBD::ODBC
0.1718
    - added EXPERIMENTAL DBIx::Custom::Model call_dbi method
    - added EXPERIMENTAL count method
    - added EXPERIMENTAL DBIx::Custom::Model count method
0.1717
    - added EXPERIMENTAL get_table_info
    - added EXPERIMETNAL user_table_info attribute
      and each_table find table info in user_table_info if set.
    - added EXPERIMENTAL get_column_info
    - added EXPERIMENTAL user_column_info attribute
      and each_column find column info in user_column_info if set.
    - connector is automatically set to DBDx::Connector object
      if connector is set to 1 when connect method is called.
0.1716
    - fixed bugs when using DBD::Oracle.
    - added EXPERIMENTAL show_tables method.
0.1715
    - default quote attribute in ODBC driver is changed to "[]"